# libease

./: .travis.yml  CHANGELOG  INSTALL  Makefile  Makefile.am  README  README.md  RELEASE  TODO  configure.ac  ease.c  ease.h  install.sh  libease.3  libease.c
examples/: multi.c  single.c
src/: Makefile.am  ease.h
tests/: README
